--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,8 @@ jobs:
     steps:
       - checkout
       - node/install-packages
-      - license-checker/validate
-          
+      - license-checker/validate:
+          forbidden: "MIT; GPL;"
 workflows:
   test:
     jobs:
